# aubio-ledfx

./: .gitignore  COMPREHENSIVE_FIX_SUMMARY.md  ISSUE_433_SUMMARY.md  MANIFEST.in  OPTIMIZATION_ROADMAP.md  README.md  SECURITY_REVIEW.md  TEST_COVERAGE_SUMMARY.md  VERSION  meson.build  pyproject.toml  vcpkg.json
.github/: COPILOT_SETUP_README.md  copilot-setup-steps.yml
.github/workflows/: build.yml  copilot-setup-steps.yml  sanitizers.yml
SECURITY/: COMPREHENSIVE_SECURITY_META_REVIEW.md  README.md
python/: meson.build
src/effects/: pitchshift_rubberband.c
src/synth/: sampler.c
src/tempo/: tempo.c
