[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "aubio"
version = "0.5.0a1"
description = "A collection of tools for music analysis"
readme = "python/README.md"
license = {text = "GNU/GPL version 3"}
authors = [
    {name = "Paul Brossier", email = "piem@aubio.org"},
]
maintainers = [
    {name = "Paul Brossier", email = "piem@aubio.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://aubio.org/"
Repository = "https://github.com/aubio/aubio"
Documentation = "https://aubio.org/manual/latest/"

[project.scripts]
aubio = "aubio.cmd:main"
aubiocut = "aubio.cut:main"

[tool.cibuildwheel]
# Build for Python 3.10-3.13
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Skip 32-bit builds and PyPy
skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux*"]

# Test the wheels
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests -v || true"

[tool.cibuildwheel.linux]
# Linux: vcpkg dependencies are installed by the workflow before cibuildwheel runs
# No before-all commands needed here

[tool.cibuildwheel.linux.environment]
# Paths are set by workflow based on architecture
# CMAKE_PREFIX_PATH and PKG_CONFIG_PATH configured per-arch in workflow

[tool.cibuildwheel.windows]
# Windows: Use vcpkg to install dependencies before building
# GitHub Actions runners have vcpkg pre-installed at VCPKG_INSTALLATION_ROOT
# Use x64-windows-static triplet to get static libraries that can be embedded in wheels
before-all = [
    "if not exist vcpkg_installed %VCPKG_INSTALLATION_ROOT%\\vcpkg.exe install --triplet=x64-windows-static",
]

[tool.cibuildwheel.windows.environment]
# Set paths so Meson can find vcpkg packages via CMake and pkg-config
# Use x64-windows-static paths
CMAKE_PREFIX_PATH = "{project}\\vcpkg_installed\\x64-windows-static"
PKG_CONFIG_PATH = "{project}\\vcpkg_installed\\x64-windows-static\\lib\\pkgconfig;{project}\\vcpkg_installed\\x64-windows-static\\share\\pkgconfig"

[tool.cibuildwheel.macos]
# macOS: Use vcpkg to build dependencies from source targeting specific deployment targets
# This ensures compatibility with older macOS versions (Homebrew builds for current OS only)
# vcpkg will be installed by the workflow before building

[tool.cibuildwheel.macos.environment]
# Paths will be set by workflow based on architecture
# CMAKE_PREFIX_PATH and PKG_CONFIG_PATH configured per-arch in workflow


[tool.meson-python]
# Allow bundling shared libraries on Windows (not needed since we use static linking)
# but keeps meson-python from complaining
allow-windows-internal-shared-libs = true
